# genbdoc

./: pyproject.toml
src/genbdoc/: __init__.py  cli.py  genbdoc.py  init.py
tests/: examplecells.ipynb  notebookexample.ipynb  notebookexample.md  resources.py  script_argv_example.py  test_integration.py  test_python_file.py  test_python_repl.py  test_shell.py
